Login dialog and PostgreSQL.